Refactor MCP request context boundaries (#39110)
* Refactor MCP request context boundaries

- replace empty handler contexts with capability-based request contexts
- bind workflow state and resource dispatch to MCP sessions
- simplify tool and completion request contracts
- strengthen session lifecycle and concurrency protection

* Refactor MCP request context boundaries

- replace empty handler contexts with capability-based request contexts
- bind workflow state and resource dispatch to MCP sessions
- simplify tool and completion request contracts
- strengthen session lifecycle and concurrency protection